# AlbionSystem

./: CREDITS.md  README.md
Bots/Obsidion/: BOTLIST.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  crowdin.yml  docker-compose.override.yaml  docker-compose.yaml  mypy.ini  noxfile.py  pyproject.toml  start.sh
Bots/Obsidion/migrations/: env.py
Bots/Obsidion/migrations/versions/: 851d11b8a33e_create_guild_table.py  d04cd6dff252_remove_server_prefix.py
Bots/Obsidion/obsidion/: __init__.py  __main__.py
Bots/Obsidion/obsidion/cogs/: __init__.py
Bots/Obsidion/obsidion/cogs/botlist/: __init__.py  botlist.py
Bots/Obsidion/obsidion/cogs/config/: __init__.py  config.py
Bots/Obsidion/obsidion/cogs/facts/: __init__.py  facts.py
Bots/Obsidion/obsidion/cogs/fun/: __init__.py  fun.py
Bots/Obsidion/obsidion/cogs/hypixel/: __init__.py  hypixel.py
Bots/Obsidion/obsidion/cogs/images/: __init__.py  images.py
Bots/Obsidion/obsidion/cogs/info/: __init__.py  info.py
Bots/Obsidion/obsidion/cogs/locales/: messages.pot
Bots/Obsidion/obsidion/cogs/minecraft/: __init__.py  minecraft.py
Bots/Obsidion/obsidion/cogs/news/: __init__.py  news.py
Bots/Obsidion/obsidion/cogs/servers/: __init__.py  servers.py
Bots/Obsidion/obsidion/core/: __init__.py  bot.py  config.py  core_commands.py  dev_commands.py  errors.py  events.py  help.py  i18n.py  settings_cache.py
Bots/Obsidion/obsidion/core/locales/: messages.pot
Bots/Obsidion/obsidion/core/utils/: chat_formatting.py  predicates.py  utils.py
Bots/Obsidion/obsidion/locales/: messages.pot
(+25 files in other folders)
